--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
-<body>
-TEST GITHHUB PAGES!
-</body>
+<html lang="en" dir="ltr">
+
+    <head>
+        <link rel="stylesheet" href="css.css">
+        <script src="js.js"></script>
+    </head>
+
+    <body>
+        <div id='board'></div>
+    </body>
 </html>
